--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,6 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-		<dependency>
-  	 	 	<groupId>com.fasterxml.jackson.core</groupId>
-   		 	<artifactId>jackson-core</artifactId>
-  		</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,9 +35,9 @@
   			<artifactId>gson</artifactId>
   		</dependency>
       <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-        
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
       </dependency>
 
 		<dependency>
