--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ activemq.user=admin
 activemq.password=admin
 activemq.name=fila.pessoa
 
-spring.datasource.url = jdbc:mysql://localhost:3306/persons
-spring.datasource.username = flc
-spring.datasource.password = senha
+spring.datasource.url = jdbc:postgresql://localhost:5432/persons
+spring.datasource.username = postgres
+spring.datasource.password = flc123
 #Loading class `com.mysql.jdbc.Driver'. This is deprecated. The new driver class is `com.mysql.cj.jdbc.Driver'.
 #The driver is automatically registered via the SPI and manual loading of the driver class is generally unnecessary.
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -15,4 +15,4 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
